--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
                     </div>
                 </div>
             </div>
-            <div class="right"></div>
+            <div class="right">
+                <h2>Filters</h2>
+                <div class="filters-container">
+                    <!-- <div class="filter">
+                        <p>Brightness</p>
+                        <input type="range" name="brightness" value="100" min="0" max="200">
+                    </div> -->
+                </div>
+            </div>
         </section>
     </main>
+<script src="app.js"></script>
 </body>
 </html>
