--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <i class="ri-image-line"></i>
                         <p>No image choosen</p>
                     </div>
+                    <canvas id="image-canvas"></canvas>
                 </div>
             </div>
             <div class="right">
@@ -34,6 +35,10 @@
                         <p>Brightness</p>
                         <input type="range" name="brightness" value="100" min="0" max="200">
                     </div> -->
+                </div>
+                <h2>Presets</h2>
+                <div class="presets">
+                    
                 </div>
             </div>
         </section>
