--- a/index.html
+++ b/index.html
@@ -4,45 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Editor</title>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Remix Icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet"/>
+
     <link rel="stylesheet" href="Theme.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <section>
-            <div class="left">
-                <div class="top">
-                    <label for="image-input" class="btn">
-                        Choose Image
-                        <input type="file" id="image-input" accept="image/*" hidden>
-                    </label>
-                    <button class="btn" id="reset-btn">Reset</button>
-                    <button class="btn" id="download-btn">Download</button>
-                </div>
-                <div class="bottom">
-                    <div class="placeholder">
-                        <i class="ri-image-line"></i>
-                        <p>No image choosen</p>
-                    </div>
-                    <canvas id="image-canvas"></canvas>
-                </div>
+
+<main class="container-fluid">
+    <section class="row gy-4">
+
+        <!-- LEFT -->
+        <div class="left col-lg-8 col-md-12">
+            <div class="top d-flex flex-wrap gap-2">
+                <label for="image-input" class="btn">
+                    <i class="ri-upload-line"></i> Choose Image
+                    <input type="file" id="image-input" accept="image/*" hidden>
+                </label>
+                <button class="btn" id="reset-btn">
+                    <i class="ri-refresh-line"></i> Reset
+                </button>
+                <button class="btn" id="download-btn">
+                    <i class="ri-download-line"></i> Download
+                </button>
             </div>
-            <div class="right">
-                <h2>Filters</h2>
-                <div class="filters-container">
-                    <!-- <div class="filter">
-                        <p>Brightness</p>
-                        <input type="range" name="brightness" value="100" min="0" max="200">
-                    </div> -->
+
+            <div class="bottom mt-3">
+                <div class="placeholder">
+                    <i class="ri-image-line"></i>
+                    <p>No image chosen</p>
                 </div>
-                <h2>Presets</h2>
-                <div class="presets">
-                    
-                </div>
+                <canvas id="image-canvas"></canvas>
             </div>
-        </section>
-    </main>
+        </div>
+
+        <!-- RIGHT -->
+        <div class="right col-lg-4 col-md-12">
+            <h2>🎛 Filters</h2>
+            <div class="filters-container">
+                
+            </div>
+            <h2 class="mt-4">✨ Presets</h2>
+            <div class="presets"></div>
+        </div>
+
+    </section>
+</main>
+
 <script src="app.js"></script>
 </body>
 </html>
